--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,18 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+     <form action="/team" method = "POST">
+        <input type="text" name= "name" placeholder = "Enter team name"><br>
+        <input type="text" name= "coach" placeholder = "Enter coach name"><br>
+        <input type="text" name= "pg" placeholder = "Enter Point Guard"><br>
+        <input type="text" name= "sg" placeholder = "Enter Shooting Guard"><br>
+        <input type="text" name= "sf" placeholder = "Enter Small Forward"><br>
+        <input type="text" name= "pf" placeholder = "Enter Power Forward"><br>
+        <input type="text" name= "c" placeholder = "Enter Center"><br>
+        <input type="submit" value = "Submit">
+    
+    
+    </form>
  </body>
 </html>
 
